# merketree

./: .gitignore  Cargo.toml
src/: custom_algo.rs  main.rs
