[package]
name = "merkel-tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs_merkle = "1.1.0"
merkletree = "0.21.0"
crypto = "0.3.0"
sha3 = "0.10.1"
web3-hash-utils = "1.0.0"
ethers = "0.6.2"
[features]
chaincore=[]